# openai_pythonsdk

./: .env  main.py  pyproject.toml
lab_notebooks/: lab01.ipynb  lab02.ipynb  lab03.ipynb  lab04.ipynb
notebooks/: 01_agents_sdk_basics.ipynb
