[project]
name = "openai-agentsdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.14"
dependencies = [
    "async>=0.6.2",
    "asyncio>=4.0.0",
    "ipykernel>=7.2.0",
    "litellm>=1.83.0",
    "ollama>=0.6.1",
    "openai>=2.31.0",
    "openai-agents>=0.13.6",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "sdk>=1.0.0",
]
